--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -108,7 +108,7 @@
 <p><strong>InfraBuild</strong>: 33  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202008.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 233  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202008 |&nbsp; <strong>WorkflowServiceTag</strong>: 202008.RC7</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. HTTPs server in front of SFTP Server</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The SFTP servers can now be accessed over HTTPS</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html">here</a>)</p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
