--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -117,7 +117,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/clone-refresh.png" alt=""></p>
+<p><img src="images/clone-refresh.png" alt=""></p>
 <ul>
 <li>The target environment (clone) will display the status <strong>Creating</strong> for:<ul>
 <li>T24 application</li>
