--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -140,7 +140,7 @@
 <ul>
 <li><p>click on <img src="images/downloadable-icon2.png" alt=""> to store the results on your local machine</p>
 </li>
-<li><p>click on <img src="./images/modular-eye.png" alt=""> to view the test results in a new page</p>
+<li><p>click on <img src="images/modular-eye.png" alt=""> to view the test results in a new page</p>
 <p><img src="images/run-factory-see-results.png" alt=""></p>
 <blockquote><p>Note: The Test Results URL is accessible as long as the portal login session is valid. When the portal session expires, the test results page throws a 401 error.</p>
 </blockquote>
