--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -299,13 +299,13 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p><br>
 </br></p>
 <h1 id="artifactory-view">Artifactory view</h1>
-<p>The artifactory view displays the uploaded components that are available for the particular stages. 
+<p>The artifactory view displays the uploaded components that are available for the all stages within a stream. 
 <img src="images/artifactory_view.png" alt=""></p>
 <ul>
-<li><p>Click on the <img src="images/i-icon.png" alt=""> icon to go to the artifactory page. You will be asked to insert the login details of the Artifactory:
-<img src="images/platform-artifactory-login.png" alt=""></p>
+<li><p>Click on the <img src="images/i-icon.png" alt=""> icon to go to the Artifactory page. You need to login with your portal credentials to the Artifactory:</p>
+<p><img src="images/platform-artifactory-login.png" alt=""></p>
 </li>
-<li><p>Click on the <img src="images/arrow-icon.png" alt=""> to expand the Component details. By clicking on the component.zip you can download the file to your local machine.
+<li><p>Click on the <img src="images/arrow-icon.png" alt=""> icon to expand the Component details. Click on the <em>component.zip</em> to download the binary to your local machine:
 <img src="images/download-component.png" alt=""></p>
 </li>
 </ul>
