--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -88,24 +88,29 @@
 <p><img src="images/run-factory-dashboard.png" alt=""> 
 <br></p>
 <p>If the factory has been run at least once, a pop-up appears which enables you to proceed with the factory run by creating a new transact environment or skipping the factory environment creation for the current factory run. This functionality is useful when you want to change the tests and use the same Transact environment used for a previous factory run.</p>
-<p><img src="images/skip-environment.png" alt="">
+<p>   <img src="images/skip-environment.png" alt="">
 <br></p>
-<p> <strong>- Option 1</strong>: If you want to skip the factory environment creation and reuse the environment from the previous factory run, select the option <strong>Reuse the existing environment from previous factory run without overwriting it</strong> and click on <strong>Run</strong> button.</p>
-<p> <strong>- Option 2</strong>: If you don&#39;t want to skip the factory environment creation just click on <strong>Run</strong> button.</p>
+<ul>
+<li><p><strong>Option 1</strong>: If you want to skip the factory environment creation and reuse the environment from the previous factory run, select the option <strong>Reuse the existing environment from previous factory run without overwriting it</strong> and click on <strong>Run</strong> button.</p>
+</li>
+<li><p><strong>Option 2</strong>: If you don&#39;t want to skip the factory environment creation just click on <strong>Run</strong> button.
+<br>
+</br></p>
+</li>
+</ul>
 <p>See the following scenarios if you choose to skip the factory environment creation:</p>
 <ul>
-<li><p><strong>Scenario 1</strong> - If the factory environment status is <strong>STARTED</strong>, the factory run will trigger directly the test environment. See below an example of the factory run timeline for this scenario:</p>
+<li><p><strong>Scenario 1</strong> - If the factory environment status is <strong>STARTED</strong>, the factory run will trigger directly the test environment. </p>
 <p><img src="images/factory_run_started_env.png" alt="">
 <br></p>
 </li>
-<li><p><strong>Scenario 2</strong> - If the factory environment status is <strong>STOPPED</strong> and previous environment status is <strong>STARTED</strong> - the factory run automatically starts the environment and once it is <strong>STARTED</strong>, it triggers the test environment. See below an example of the factory run timeline for this scenario:</p>
-<p><img src="images/factory_run_stopped_env.png" alt=""></p>
+<li><p><strong>Scenario 2</strong> - If the factory environment status is <strong>STOPPED</strong> and previous environment status is <strong>STARTED</strong> - the factory run automatically starts the environment and once it is <strong>STARTED</strong>, it triggers the test environment. </p>
 </li>
 </ul>
-<blockquote><p>Note: if the factory environment creation has failed during the previous factory run, it is not possible to use it for your current factory run. You need to first identify and solve the issue in order to see the <strong>Reuse the existing environment from previous factory run without overwriting it</strong> in the pop-up. Otherwise this checkbox will not appear in the pop-up.</p>
-</blockquote>
-<p><br></p>
-<p>Once the <strong>Run</strong> button is clicked, the process is initiated and it gets immediately to the stage where an environment based on your chosen template is created. </p>
+<div class="NOTE"><h5>Note</h5><p>If the factory environment creation has failed during the previous factory run, it is not possible to use it for your current factory run. You need to first identify and solve the issue in order to see the <strong>Reuse the existing environment from previous factory run without overwriting it</strong> in the pop-up. Otherwise this checkbox will not appear in the pop-up.</p>
+</div>
+<p><br> </p>
+<p>Once the <strong>Run</strong> button is clicked, the process is initiated and it gets immediately to the stage where an environment based on your chosen template is created:</p>
 <p><img src="images/run-factory-deploy.png" alt=""></p>
 <p>During the factory run you are able to:</p>
 <ol>
@@ -132,20 +137,25 @@
 </li>
 </ol>
 </div>
-<p>After the environment deployment phase is completed, the next phase (stage) is Running Test Deploy. During this phase a test environment is created (you can check it under Environments tab). </p>
+<p>After the environment deployment phase is complete, the next phase (stage) is Running Test Deploy. During this phase a test environment is created (you can check it under Environments tab). </p>
 <p><strong>Note</strong> that this environment is automatically deleted after the tests are run and the process is completed.</p>
 <p><img src="images/run-factory-create-test.png" alt=""></p>
-<p> After running the tests successfully, you will see some details about all stages and the results, as in the example below. You can either download the test results or open them in a new page:</p>
+<p> After running the tests successfully, you will see some details about all stages and the results, as in the example below </p>
 <p><img src="images/run-factory-completed.png" alt=""></p>
+<p>You are able to do the following:</p>
 <ul>
-<li><p>click on <img src="images/downloadable-icon2.png" alt=""> to store the results on your local machine</p>
+<li><p><img src="images/view-test-scripts-location.png" alt=""> - click to view the test scripts location in the Artifactory (you need to login with your user credentials)</p>
 </li>
-<li><p>click on <img src="images/modular-eye.png" alt=""> to view the test results in a new page</p>
+<li><p><img src="images/application-logs.png" alt=""> - click to download the factory logs</p>
+</li>
+<li><p><img src="images/downloadable-icon2.png" alt=""> - click on the downloadable icon to store the results on your local machine</p>
+</li>
+<li><p><img src="images/modular-eye.png" alt=""> - click on the modular eye icon to view the test results in a new page as below:</p>
 <p><img src="images/run-factory-see-results.png" alt=""></p>
-<blockquote><p>Note: The Test Results URL is accessible as long as the portal login session is valid. When the portal session expires, the test results page throws a 401 error.</p>
-</blockquote>
 </li>
 </ul>
+<div class="NOTE"><h5>Note</h5><p>The Test Results URL is accessible as long as the portal login session is valid. When the portal session expires, the test results page throws a 401 error.</p>
+</div>
 <p>Based on any factory run, the user can take several actions:</p>
 <ul>
 <li><p><strong>Trigger New Environment</strong> - trigger a new environment to do triage, demo or ad-hoc testing (this will clone the factory environment)</p>
@@ -159,8 +169,8 @@
 </ul>
 <p><img src="images/run-factory-new-environment.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>The &#39;Create New Template&#39; button will be available only if the factory run is successful. </p>
-<p> If  you want to have the creation of the new template enabled even when the factory run fails go to General on the left side of the menu and select the &#39;Setup Factory&#39; tab. Tick the &#39;Yes&#39; value that corresponds to the key &#39;Do you want to allow creation of template from failed factories&#39;.</p>
 </div>
+<p> If  you want to have the creation of the new template enabled even when the factory run fails go to General on the left side of the menu and select the &#39;Setup Factory&#39; tab. Tick the &#39;Yes&#39; value that corresponds to the key &#39;Do you want to allow creation of template from failed factories&#39;.</p>
 <p>   <img src="images/trigger-new-template.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
