--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -191,7 +191,7 @@ responsibility to inform the new user about its credentials and set of permissio
 </ul>
 <p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
 <p>For security purposes, if you are inactive for more than 5 minutes on the Temenos Continuous Deployment Platform a dialog box pop up prompts on the screen in the last minute of your inactive session which asks to choose whether you want to extend the session or logout.</p>
-<p><img src="./images/idler-session-timeout.png" alt=""></p>
+<p><img src="images/idler-session-timeout.png" alt=""></p>
 <ul>
 <li><p>By clicking <strong>Extend</strong> your session will still be active</p>
 </li>
