--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 
-<p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Further anybody will be able to create an environment with the baselined version of the product.</p>
+<p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Furthermore anybody will be able to create an environment with the baselined version of the product.</p>
 <p>To set up the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/factories.html" title="here">here</a>.</p>
 <p>To run the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html" title="here">here</a>.</p>
 <h1 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h1>
