--- a/home/techguides/automated-factories.html
+++ b/home/techguides/automated-factories.html
@@ -182,8 +182,8 @@ Test Stage: represents a stable version of components that is pre-tested from th
 <h2 id="promotion-configuration">Promotion Configuration</h2>
 <p>This configuration enables the user to select all the required principle products along with the target stage to which they will be promoted after a successful factory run. In addition, the user can select the Test Components along with the target stage if they need promotion as well. 
 <img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
-<blockquote><p>Note: it is not mandatory to fill in the Tests to Promote field and the associated Select target stage for Tests from the right side. </p>
-</blockquote>
+<div class="NOTE"><h5>Note</h5><p>It is not mandatory to fill in the Tests to Promote field and the associated Select target stage for Tests from the right side. </p>
+</div>
 <h4 id="factory-scheduler">Factory Scheduler</h4>
 <p>A user has the privilege to configure the factory run schedule to automatically run the tests and have the results available daily.</p>
 <ul>
