--- a/home/techguides/artifactory-test-cycle.html
+++ b/home/techguides/artifactory-test-cycle.html
@@ -91,7 +91,7 @@
 <li><p>the testcases.zip file into the <strong>target</strong> stage (in this case - primary_stage_demo). <em>The folder name is TestCases.</em></p>
 </li>
 </ul>
-<p>See <a href="components-products.html#how-to-set-up-delete-components" target="blank"><strong>here</strong></a> how to upload the components&#39; binaries, respectively <a href="stage-testcases.html" target="blank"><strong>here</strong></a> for the test cases.</p>
+<p>See <a href="components-products.html#how-to-set-up-delete-components" target="blank"><strong>here</strong></a> how to upload the components&#39; binaries, respectively <a href="./stage-testcases.md" target="blank"><strong>here</strong></a> for the test cases.</p>
 <p><br></p>
               <hr>
               
