--- a/home/techguides/fix-issues-factory-run.html
+++ b/home/techguides/fix-issues-factory-run.html
@@ -100,7 +100,7 @@
 <h4 id="how-to-fix"><strong>How to fix:</strong></h4>
 <p>Go to <a href="components-products.html#how-to-set-up-delete-components" target="blank"><strong>this</strong></a> section to see how to upload the artifacts. </p>
 <p>After that, go to the dashboard and run again the factory. </p>
-<div class="NOTE"><h5>Note</h5><p>The same error you will encounter in case the test cases aren&#39;t uploaded. The error will reflect the stream, the stage and the missing folder. You can also check <a href="stage-testcases.html" target="blank"><strong>this user guide</strong></a> to see how to add the test cases. </p>
+<div class="NOTE"><h5>Note</h5><p>The same error you will encounter in case the test cases aren&#39;t uploaded. The error will reflect the stream, the stage and the missing folder. You can also check <a href="./stage-testcases.md" target="blank"><strong>this user guide</strong></a> to see how to add the test cases. </p>
 </div>
 <p><br></p>
               <hr>
