--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -103,8 +103,8 @@
 <br>
 </br> </p>
 <h1 id="202009"><strong>202009</strong></h1>
-<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA |&nbsp; <strong>WorkflowServiceTag</strong>: TBA</p>
+<p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202009.RC4
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 273  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202009 |&nbsp; <strong>WorkflowServiceTag</strong>: 202009.RC5</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The SFTP servers can now be accessed over HTTPS</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- This enhancement directs the user to reset the password if required to enable HTTPS based access (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>).
