--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -89,7 +89,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. User Password Reset Option</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Organization Admins can now reset other user&#39;s password. (read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">here</a>). 
 <br>
-</br> </p>
+</br></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Change in the naming convention of the downloaded test results</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Now the tests results file name downloaded from the Factory Dashboard has a unique name containing the factory name and the time stamp (i.e.: factoryname_timestamp_testresults.zip).
 <br>
@@ -97,7 +97,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Factory run manifest file</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- The factory run manifest now displays the test cases and the platform always picks up the latest file from the test cases component in artifactory.
 <br> 
-</br> </p>
+</br>  </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Factory edit issues</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- To improve the user experience, UI changes have been applied to the <strong>Edit Factory</strong> feature (read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>).
 <br>
@@ -129,10 +129,8 @@
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 233  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202008 |&nbsp; <strong>WorkflowServiceTag</strong>: 202008.RC7</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Technical Enhancements</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>)
-<br>
-</br> 
-<br>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- The SFTP servers can now be accessed over HTTPS (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>)</p>
+<p><br>
 </br> </p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
