--- a/home/toc.html
+++ b/home/toc.html
@@ -216,7 +216,7 @@
                           <a href="manage-factories-video.html" name="" title="Manage Factories">Manage Factories</a>
                         </li>
                         <li>
-                          <a href="manage-testcases-video.html" name="" title="Manage Testcases">Manage Testcases</a>
+                          <a href="./manage-testcases-video.md" name="" title="Manage Testcases">Manage Testcases</a>
                         </li>
                         <li>
                           <a href="run-factory-video.html" name="" title="Run Factory">Run Factory</a>
